@@ -2673,6 +2673,9 @@ static int pbx_extension_helper(struct ast_channel *c, struct ast_context *con,
 				ast_copy_string(c->exten, exten, sizeof(c->exten));
 			c->priority = priority;
 			pbx_substitute_variables(passdata, sizeof(passdata), c, e);
+#ifdef CHANNEL_TRACE
+			ast_channel_trace_update(c);
+#endif
 			ast_debug(1, "Launching '%s'\n", app->name);
 			if (VERBOSITY_ATLEAST(3)) {
 				char tmp[80], tmp2[80], tmp3[EXT_DATA_SIZE];
